# BGA_Portfolio

./: .gitattributes  README.md
ADH_portfolio/: ADH_portfolio.sln
ADH_portfolio/ADH_Android/ADH_portfolio/: keystore.properties
ADH_portfolio/ADH_Android/ADH_portfolio/app/src/main/cpp/: CMakeLists.txt  SyncKey.cpp  SyncKey.h  native-lib.cpp  native-lib.h
ADH_portfolio/ADH_Android/ADH_portfolio/app/src/main/cpp/game/: Battle.cpp  Battle.h  BattleUI.cpp  BattleUI.h  Character.cpp  Common.cpp  Common.h  Ending.cpp  Game.cpp  Game.h  Intro.cpp  Loading.cpp  Map.cpp  Menu.cpp  Menu.h  MenuUI.cpp  Stage.cpp  Stage.h  StageUI.cpp  StageUI.h
ADH_portfolio/ADH_Android/ADH_portfolio/app/src/main/cpp/std/: iArray.cpp  iButton.cpp  iButton.h  iFBO.cpp  iFBO.h  iFPS.cpp  iFPS.h  iGraphics.h  iGraphics_Android.cpp  iGraphics_Window.cpp  iImage.cpp  iImage.h  iNDK.cpp  iNDK.h  iOpenAL.cpp  iOpenAL.h  iOpenGL.cpp  iOpenGL.h  iPage.cpp  iPage.h  iRect.cpp  iRect.h  iStd.cpp  iStd.h  iStrTex.cpp  iTable.cpp  iTable.h  iType.h
ADH_portfolio/ADH_Android/ADH_portfolio/app/src/main/cpp/util/: iDrop.cpp  iDrop.h  iShaderToy.cpp
ADH_portfolio/ADH_portfolio/: ADH_portfolio.rc  ADH_portfolio.vcxproj  ADH_portfolio.vcxproj.filters  OpenAL32문제시 필독!!!.txt  Resource.h
ADH_portfolio/ADH_portfolio/Debug/: ADH_portfolio.exe.recipe  RCa07148  battle.obj.enc  common.obj.enc  loading.obj.enc  menu.obj.enc  stage.new.obj.enc  stage.obj.enc  vc142.idb
ADH_portfolio/ADH_portfolio/Release/: ADH_portfolio.exe.recipe  ADH_portfolio.iobj  ADH_portfolio.ipdb  ADH_portfolio.res
ADH_portfolio/ADH_portfolio/game/: App.cpp  App.h  Battle.cpp  Battle.h  BattleUI.cpp  BattleUI.h  Character.cpp  Character.h  Common.cpp  Common.h  Ending.cpp  Game.cpp  Game.h  Intro.cpp  Intro.h  Loading.cpp  Loading.h  Map.cpp  Map.h  MapEditor.cpp  MapEditor.h  MapEditorUI.cpp  MapEditorUI.h  Menu.cpp  Menu.h  MenuUI.cpp  MenuUI.h  Stage.cpp  Stage.h  StageUI.cpp  TileType.h  UI.h  iFBO.cpp  iFBO.h  iWindow.cpp  iWindow.h
ADH_portfolio/ADH_portfolio/map/: map0.tile  map0.tile_copy  map1.tile  map1.tile_copy  map2.tile  map2.tile_copy  map3.tile  map3.tile_copy  map4.tile  map5.tile  map6.tile  map6.tile_copy  map7.tile  map8.tile  map9.tile
ADH_portfolio/ADH_portfolio/std/: iArray.cpp  iButton.cpp  iButton.h  iColor.cpp  iFPS.cpp  iGraphics.cpp  iGraphics.h  iImage.cpp  iImage.h  iMatrix.cpp  iMatrix.h  iOpenAL.cpp  iOpenAL.h  iOpenGL.cpp  iOpenGL.h  iPoint.cpp  iPoint.h  iPopup.cpp  iPopup.h  iRect.cpp  iRect.h  iSize.cpp  iSize.h  iSort.cpp  iStd.cpp  iStd.h  iStrTex.cpp  iStrTex.h  iString.cpp  (+1 more)
ADH_portfolio/Release/: ADH_portfolio.iobj  ADH_portfolio.ipdb
ADH_portfolio/ScriptTool/: Resource.h  ScriptTool.cpp  ScriptTool.h  ScriptTool.rc  ScriptTool.vcxproj  ScriptTool.vcxproj.filters  sType.h  sc_Std.h  sc_Windows.cpp
WIN_TEST/: WIN_TEST.sln
WIN_TEST/Debug/: WIN_TEST1.ilk
WIN_TEST/TEST/: TEST.vcxproj
WIN_TEST/WIN_TEST1/: WIN_TEST1.rc  WIN_TEST1.vcxproj  WIN_TEST1.vcxproj.filters
WIN_TEST1/: Resource.h  WIN_TEST1.vcxproj  WIN_TEST1.vcxproj.filters
WIN_TEST1/Debug/: WIN_TEST1.exe.recipe  WIN_TEST1.ilk  WIN_TEST1.vcxproj.FileListAbsolute.txt  character.obj.enc  vc142.idb  win_test1.obj.enc
WIN_TEST1/game/: App.cpp  App.h  Character.cpp  Character.h  Ending.cpp  Ending.h  Game.cpp  Intro.cpp  Loading.cpp  Loading.h  Map.cpp  Map.h  Map2.cpp  Map2.h  Map3.cpp  Map3.h  MapEditor.cpp  MapEditor.h  Tile.cpp  Tile.h  TileType.h  WIN_TEST1.cpp  iGraphics.cpp  iGraphics.h  iWindow.cpp
WIN_TEST1/std/: iImage.h  iOpenGL.cpp  iOpenGL.h  iPoint.cpp  iRect.cpp  iRect.h  iSort.h  iStd.cpp  iStd.h  iString.cpp  iString.h  iType.h
(+140 files in other folders)
